<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/spartan_green"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gotham_medium"
        android:text="@string/onboarding_login"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:layout_gravity="start"
        android:layout_marginStart="45dp"/>

    <!--Username field -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="40dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="false">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:hint="@string/usernameEditTextLabel"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:minWidth="320dp"
                android:minHeight="50dp"
                android:importantForAutofill="no"
                android:id="@+id/username_et"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>


    <!--Password field -->
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="30dp"
        app:cardElevation="0dp"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="40dp">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:hint="@string/passwordEditTextLabel"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minWidth="320dp"
                android:minHeight="50dp"
                android:importantForAutofill="no"
                android:id="@+id/password_et"/>
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_marginTop="5dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/LoginLabel"
            android:textColor="@color/white"
            android:fontFamily="@font/gotham_bold"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:onClick="onLogin"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/login_rectangle_detail"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="40dp"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Or"
                android:gravity="center"
                android:textColor="@color/white"
                android:fontFamily="@font/gotham_light"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/login_rectangle_detail"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="25dp"
                android:layout_gravity="center_vertical" />

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/SignUpLabel"
            android:fontFamily="@font/gotham_bold"
            android:textColor="@color/white"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="10dp"
            android:layout_marginBottom="5dp"
            android:onClick="onSignup"/>

    </LinearLayout>



</LinearLayout>